--- a/ProjetAirBermudes/AirBermudesClientAngular/css/site.css
+++ b/ProjetAirBermudes/AirBermudesClientAngular/css/site.css
@@ -23,3 +23,46 @@ div#loading > img {
 
     height: 500px;
 }
+
+
+.addButton {
+
+    /*
+    background: #ffffff;
+    box-shadow: 0 3px 8px 0 rgba(0, 0, 0, 0.35);
+    outline: 1px solid rgba(0, 0, 0, 0.15);
+    */
+
+    box-shadow: 0 3px 8px 0 rgba(0, 0, 0, 0.35);
+    background: #f5f5f5;
+
+    border-radius: 40px 0 0 40px;
+
+    position: fixed;
+    top: 120px;
+    right: -45px;
+    padding: 15px;
+
+    z-index: 99;
+
+    /* ===== Animation ===== */
+    transition: right 0.25s;
+}
+
+.addButton > span {
+
+    font-size: 25px;
+}
+
+.addButton > p  {
+
+    display: inline;
+}
+
+.addButton:hover{
+    right: -5px;
+}
+
+.addButton:focus {
+  outline: none;
+}
